<resources>
    <string name="app_logo">App Logo</string>
    <string name="logo">Logo</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="username_email">Username/Email</string>
    <string name="welcome">Welcome to Monthlies!</string>
    <string name="userimg">userimg</string>
    <string name="passimg">passimg</string>
    <string name="password">password\n</string>
    <string name="set_btn">Home</string>
    <string name="greeting">Hello!\nHow are you feeling today?</string>
    <string name="date_example">May 21</string>
    <string name="statistics">Statistics</string>
    <string name="calendar">Calendar</string>
    <string name="symptoms">Symptoms</string>
    <string name="insert_your_inputs">Insert your inputs</string>
    <string name="symptoms_modal">Symptoms</string>
    <string name="symptoms_m">Symptoms</string>
    <string name="done_btn">Done</string>
    <string name="symptom_1">Normal</string>
    <string name="symptom_2">Cramps</string>
    <string name="symptom_3">Tender</string>
    <string name="symptom_4">Headache</string>
    <string name="symptom_5">Acne</string>
    <string name="symptom_6">Fatigue</string>
    <string name="symptom_7">Cramps</string>
    <string name="symptom_8">Backache</string>
    <string name="symptom_9">Cravings</string>
    <string name="input_your_symptoms">Input your symptoms</string>
    <string name="back_to_home_cal">Back to Home</string>
    <string name="calendar_page">Calendar</string>
    <string name="statistics_page">Statistics</string>
    <string name="light">Light</string>
    <string name="medium">Medium</string>
    <string name="heavy">Heavy</string>
    <string name="menstrual_flow">Menstrual Flow</string>
    <string name="personal_tracker">Personal Tracker</string>
</resources>