<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/symptom_modal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:padding="24dp">

    <TextView
        android:id="@+id/symptoms_mtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/symptoms_m"
        android:textColor="#8C7474"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/input_symp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/input_your_symptoms"
        android:textColor="#8C7474"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symptoms_mtitle"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/closeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/cal_pink"
        android:text="@string/done_btn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symptomCard"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/symptomCard"
        android:layout_width="286dp"
        android:layout_height="194dp"
        android:layout_marginTop="36dp"
        android:outlineAmbientShadowColor="#FF99AC"
        android:outlineSpotShadowColor="@color/dark_pink"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_symp"
        tools:ignore="TextSizeCheck">

        <!-- Container layout for buttons -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="3"
            android:padding="10dp"
            android:rowCount="3"
            android:rowOrderPreserved="false"
            tools:ignore="ExtraText">

            <!-- 9 Buttons -->
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:backgroundTint="#FF8271"
                android:padding="2dp"
                android:text="@string/symptom_1"
                tools:ignore="TextContrastCheck,VisualLintButtonSize" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:backgroundTint="#FF8271"
                android:padding="2dp"
                android:text="@string/symptom_2"
                tools:ignore="DuplicateIds,DuplicateSpeakableTextCheck,TextContrastCheck,VisualLintButtonSize" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:backgroundTint="#FF8271"
                android:padding="2dp"
                android:text="@string/symptom_3"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:ignore="DuplicateIds,TextContrastCheck,VisualLintButtonSize" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:backgroundTint="#FF8271"
                android:padding="2dp"
                android:text="@string/symptom_4"
                android:textColor="@color/white"
                tools:ignore="DuplicateIds,TextContrastCheck,VisualLintButtonSize" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:backgroundTint="#FF8271"
                android:padding="2dp"
                android:text="@string/symptom_5"
                tools:ignore="DuplicateIds,TextContrastCheck,VisualLintButtonSize" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:backgroundTint="#FF8271"
                android:padding="2dp"
                android:text="@string/symptom_6"
                tools:ignore="DuplicateIds,TextContrastCheck,VisualLintButtonSize" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:backgroundTint="#FF8271"
                android:padding="2dp"
                android:text="@string/symptom_7"
                tools:ignore="DuplicateIds,TextContrastCheck,TouchTargetSizeCheck,VisualLintButtonSize" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:backgroundTint="#FF8271"
                android:padding="2dp"
                android:text="@string/symptom_8"
                tools:ignore="DuplicateIds,TextContrastCheck,TouchTargetSizeCheck,VisualLintButtonSize" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:backgroundTint="#FF8271"
                android:padding="2dp"
                android:text="@string/symptom_9"
                tools:ignore="DuplicateIds,TextContrastCheck,TouchTargetSizeCheck,VisualLintButtonSize" />
            android:backgroundTint="#FF8271"
        </GridLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
