<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/cal_pink"
        android:text="@string/back_to_home_cal"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/Statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/statistics_page"
        android:textColor="#8C7474"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Period Details -->
    <ImageView
        android:id="@+id/period_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elevation="8dp"
        android:background="@android:color/white"
        android:padding="4dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Statistics"
        app:srcCompat="@drawable/flow_details"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/flow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/menstrual_flow"
        android:textColor="#8C7474"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/period_info" />

    <!-- Sleep Img -->
    <LinearLayout
        android:id="@+id/flowLayout"
        android:layout_width="408dp"
        android:layout_height="167dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:elevation="1dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flow"
        tools:ignore="MissingConstraints,VisualLintBounds">

        <!-- Light Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/lightCard"
            android:layout_width="96dp"
            android:layout_height="120dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/lightIcon"
                    android:layout_width="31dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_light"
                    app:tint="#A4A3A3"
                    tools:ignore="ContentDescription,ImageContrastCheck" />

                <TextView
                    android:id="@+id/lightLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/light"
                    android:textColor="#A4A3A3"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Medium Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/mediumCard"
            android:layout_width="96dp"
            android:layout_height="120dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/mediumIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_medium"
                    app:tint="#A4A3A3"
                    tools:ignore="ContentDescription,ImageContrastCheck" />

                <TextView
                    android:id="@+id/mediumLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/medium"
                    android:textColor="#A4A3A3"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Heavy Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/heavyCard"
            android:layout_width="96dp"
            android:layout_height="120dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/heavyIcon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_heavy"
                    app:tint="#A4A3A3"
                    tools:ignore="ContentDescription,ImageContrastCheck" />

                <TextView
                    android:id="@+id/heavyLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/heavy"
                    android:textColor="#A4A3A3"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <!-- Sleep Img -->

    <!-- Weight Img -->

    <ImageView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@color/light_pink"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/sleep"
        app:layout_constraintTop_toBottomOf="@+id/tracker"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/weight"
        tools:ignore="ContentDescription,ImageContrastCheck,VisualLintBounds" />

    <ImageView
        android:id="@+id/sleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:background="@color/light_pink"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tracker"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/daily_sleep"
        tools:ignore="ContentDescription,ImageContrastCheck,VisualLintBounds" />

    <TextView
        android:id="@+id/tracker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/personal_tracker"
        android:textColor="#8C7474"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flowLayout"
        tools:ignore="VisualLintOverlap" />

</androidx.constraintlayout.widget.ConstraintLayout>
